# Restraunt-Management

./: .gitignore  CMakeLists.txt  connection.cpp  connection.h  main.cpp  mainwindow.cpp  mainwindow.h  meal.cpp  meal.h  mealprice.cpp  mealprice.h  portion.cpp  portion.h  repository.cpp  repository.h
